--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "brainovision-website",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "",
+  "homepage": "https://github.com/Brainovisionsolution/techedge#readme",
+  "bugs": {
+    "url": "https://github.com/Brainovisionsolution/techedge/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Brainovisionsolution/techedge.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,8 +29,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
@@ -29,6 +41,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^6.2.5"
   }
 }
